--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,16 @@
 				<artifactId>junit-jupiter-api</artifactId>
 				<version>5.3.1</version>
 			</dependency>
-			
-			
-			
-			
+
+
+
+
+			<dependency>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-core</artifactId>
+				<version>1.3</version>
+				<scope>test</scope>
+			</dependency>
   	</dependencies>
 
 
@@ -35,6 +41,11 @@
   				<groupId>org.apache.maven.plugins</groupId>
   				<artifactId>maven-surefire-plugin</artifactId>
   				<version>2.22.0</version>
+  				<configuration>
+				    <includes>
+				      <include>**/*Test.java</include>
+				    </includes>
+				</configuration>
   			</plugin>
   		</plugins>
   	</build>
