--- a/pom.xml
+++ b/pom.xml
@@ -23,29 +23,32 @@
 				<version>5.3.1</version>
 			</dependency>
 
-
-
-
 			<dependency>
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest-core</artifactId>
 				<version>1.3</version>
 				<scope>test</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.junit.platform</groupId>
+				<artifactId>
+					junit-platform-surefire-provider
+				</artifactId>
+				<version>1.3.1</version>
+			</dependency>
+			<dependency>
+				<groupId>org.junit.jupiter</groupId>
+				<artifactId>junit-jupiter-engine</artifactId>
+				<version>5.3.1</version>
+			</dependency>
   	</dependencies>
-
-
+  	
   	<build>
   		<plugins>
   			<plugin>
   				<groupId>org.apache.maven.plugins</groupId>
   				<artifactId>maven-surefire-plugin</artifactId>
   				<version>2.22.0</version>
-  				<configuration>
-				    <includes>
-				      <include>**/*Test.java</include>
-				    </includes>
-				</configuration>
   			</plugin>
   		</plugins>
   	</build>
