--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Rummikub-Game</name>
+	<name>rummikub-2.0</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -20,4 +20,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/main/resources/COMP3004-Iteration1-TestGame-NazAlKassm-100809967</name>
+			<type>2</type>
+			<location>/home/naz/Downloads/COMP3004-Iteration1-TestGame-NazAlKassm-100809967</location>
+		</link>
+	</linkedResources>
 </projectDescription>
