--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,17 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-core</artifactId>
-				<version>1.3</version>
-				<scope>test</scope>
+			    <groupId>org.hamcrest</groupId>
+			    <artifactId>hamcrest-all</artifactId>
+			    <version>1.3</version>
 			</dependency>
+			
+			<dependency>
+			    <groupId>org.hamcrest</groupId>
+			    <artifactId>hamcrest-all</artifactId>
+			    <version>1.3</version>
+			</dependency>
+					
 			<dependency>
 				<groupId>org.junit.platform</groupId>
 				<artifactId>
