--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -10,37 +10,27 @@
   </properties>
   	
   	<dependencies>
+		<dependency>
+		  <groupId>org.tinylog</groupId>
+		  <artifactId>tinylog</artifactId>
+		  <version>1.2</version>
+		</dependency>
 
-			<dependency>
-			  <groupId>org.tinylog</groupId>
-			  <artifactId>tinylog</artifactId>
-			  <version>1.2</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-api</artifactId>
-				<version>5.3.1</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.hamcrest</groupId>
-				<artifactId>hamcrest-core</artifactId>
-				<version>1.3</version>
-				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>org.junit.platform</groupId>
-				<artifactId>
-					junit-platform-surefire-provider
-				</artifactId>
-				<version>1.3.1</version>
-			</dependency>
-			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-engine</artifactId>
-				<version>5.3.1</version>
-			</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-core</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/junit/junit -->
+		<dependency>
+    		<groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		    <scope>test</scope>
+		</dependency>
   	</dependencies>
   	
   	<build>
