--- a/pom.xml
+++ b/pom.xml
@@ -9,53 +9,22 @@
     <maven.compiler.target>1.6</maven.compiler.target>
   </properties>
   	
-  	<dependencies>
+	<dependencies>
 
-			<dependency>
-			  <groupId>org.tinylog</groupId>
-			  <artifactId>tinylog</artifactId>
-			  <version>1.2</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-api</artifactId>
-				<version>5.3.1</version>
-			</dependency>
-
-			<dependency>
-			    <groupId>org.hamcrest</groupId>
-			    <artifactId>hamcrest-all</artifactId>
-			    <version>1.3</version>
-			</dependency>
-			
-			<dependency>
-			    <groupId>org.hamcrest</groupId>
-			    <artifactId>hamcrest-all</artifactId>
-			    <version>1.3</version>
-			</dependency>
-					
-			<dependency>
-				<groupId>org.junit.platform</groupId>
-				<artifactId>
-					junit-platform-surefire-provider
-				</artifactId>
-				<version>1.3.1</version>
-			</dependency>
-			<dependency>
-				<groupId>org.junit.jupiter</groupId>
-				<artifactId>junit-jupiter-engine</artifactId>
-				<version>5.3.1</version>
-			</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+		<dependency>
+		    <groupId>org.hamcrest</groupId>
+		    <artifactId>hamcrest-all</artifactId>
+		    <version>1.3</version>
+		    <scope>test</scope>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.tinylog/tinylog -->
+		<dependency>
+		    <groupId>org.tinylog</groupId>
+		    <artifactId>tinylog</artifactId>
+		    <version>1.3.5</version>
+		</dependency>
   	</dependencies>
-  	
-  	<build>
-  		<plugins>
-  			<plugin>
-  				<groupId>org.apache.maven.plugins</groupId>
-  				<artifactId>maven-surefire-plugin</artifactId>
-  				<version>2.22.0</version>
-  			</plugin>
-  		</plugins>
-  	</build>
+
 </project>
