Created a new title screen using SceneBuilder

--- a/.classpath
+++ b/.classpath
@@ -20,6 +20,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src/view/java"/>
 	<classpathentry kind="src" path="src/model/java"/>
+	<classpathentry kind="src" path="src/controller/java"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
